--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -26,7 +26,7 @@
   <description>Apache Log4j Bill of Materials</description>
   <groupId>org.apache.logging.log4j</groupId>
   <artifactId>log4j-bom</artifactId>
-  <version>2.12.4</version>
+  <version>n.2.12.5-SNAPSHOT</version>
   <packaging>pom</packaging>
   <dependencyManagement>
     <dependencies>
@@ -193,6 +193,6 @@
   </build>
 
   <scm>
-    <tag>log4j-2.12.4-rc1</tag>
+    <tag>log4j-2.12.1-rc1</tag>
   </scm>
 </project>
