--- a/pom.xml
+++ b/pom.xml
@@ -734,6 +734,7 @@
             <bottom><![CDATA[<p align="center">Copyright &#169; {inceptionYear}-{currentYear} {organizationName}. All Rights Reserved.<br />
             Apache Logging, Apache Log4j, Log4j, Apache, the Apache feather logo, the Apache Logging project logo,
             and the Apache Log4j logo are trademarks of The Apache Software Foundation.</p>]]></bottom>
+            <doclint>none</doclint>
           </configuration>
         </plugin>
         <plugin>
