--- a/pom.xml
+++ b/pom.xml
@@ -505,6 +505,12 @@
         <scope>provided</scope>
       </dependency>
       <dependency>
+        <groupId>org.glassfish.hk2</groupId>
+        <artifactId>osgi-resource-locator</artifactId>
+        <version>2.5.0-b42</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
         <groupId>org.fusesource.jansi</groupId>
         <artifactId>jansi</artifactId>
         <version>2.4.0</version>
