--- a/pom.xml
+++ b/pom.xml
@@ -814,6 +814,13 @@
         <version>${junitJupiterVersion}</version>
         <scope>test</scope>
       </dependency>
+      <!-- Environment and system properties support for Jupiter -->
+      <dependency>
+        <groupId>uk.org.webcompere</groupId>
+        <artifactId>system-stubs-jupiter</artifactId>
+        <version>2.0.1</version>
+        <scope>test</scope>
+      </dependency>
       <!-- JUnit 4 API dependency -->
       <dependency>
         <groupId>junit</groupId>
