--- a/log4j-1.2-api/src/test/resources/log4j1-appenders-custom-1.properties
+++ b/log4j-1.2-api/src/test/resources/log4j1-appenders-custom-1.properties
@@ -19,15 +19,20 @@ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
-log4j.appender.A1=org.apache.log4j.FileAppender
-log4j.appender.A1.File=target/temp.A1
-log4j.appender.A1.Append=false
-log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%-5p %c{2} - %m%n
-log4j.appender.A2=org.apache.log4j.FileAppender
+#
+log4j.appender.A1=org.apache.log4j.CustomNoopAppender
+log4j.appender.A1.booleanA=true
+log4j.appender.A1.intA=1
+log4j.appender.A1.stringA=A
+#
+log4j.appender.A2=org.apache.log4j.CustomFileAppender
+log4j.appender.A2.booleanA=true
+log4j.appender.A2.intA=1
+log4j.appender.A2.stringA=A
 log4j.appender.A2.File=target/temp.A2
 log4j.appender.A2.Append=false
 log4j.appender.A2.layout=org.apache.log4j.TTCCLayout
 log4j.appender.A2.layout.DateFormat=ISO8601
+#
 log4j.logger.org.apache.log4j.xml=trace, A1
 log4j.rootLogger=trace, A1, A2
