--- a/log4j-cassandra/pom.xml
+++ b/log4j-cassandra/pom.xml
@@ -35,7 +35,7 @@
     <projectDir>/log4j-cassandra</projectDir>
     <module.name>org.apache.logging.log4j.cassandra</module.name>
     <maven.doap.skip>true</maven.doap.skip>
-    <cassandra-all.version>4.0.4</cassandra-all.version>
+    <cassandra-all.version>3.11.13</cassandra-all.version>
   </properties>
 
   <dependencies>
@@ -87,6 +87,12 @@
           <artifactId>logback-core</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cassandra</groupId>
+      <artifactId>cassandra-thrift</artifactId>
+      <version>3.11.13</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
