--- a/log4j-to-jul/pom.xml
+++ b/log4j-to-jul/pom.xml
@@ -43,6 +43,7 @@
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.core</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
