--- a/log4j-web/pom.xml
+++ b/log4j-web/pom.xml
@@ -49,6 +49,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <!-- Test dependencies -->
