--- a/log4j-cassandra/pom.xml
+++ b/log4j-cassandra/pom.xml
@@ -67,11 +67,13 @@
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
       <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
       <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
     <!-- Cassandra appender integration testing -->
     <dependency>
