--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -104,22 +104,26 @@
     <dependency>
       <groupId>javax.mail</groupId>
       <artifactId>javax.mail-api</artifactId>
+      <scope>provided</scope>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>javax.activation</groupId>
       <artifactId>javax.activation-api</artifactId>
+      <scope>provided</scope>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>com.sun.mail</groupId>
       <artifactId>javax.mail</artifactId>
+      <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
     <!-- Used for JMS appenders (needs an implementation of course) -->
     <dependency>
       <groupId>javax.jms</groupId>
       <artifactId>javax.jms-api</artifactId>
+      <scope>provided</scope>
       <optional>true</optional>
     </dependency>
     <!-- Used for Kafka appender -->
@@ -523,7 +527,11 @@
             <!-- TODO: exclude internal classes from export -->
             <Export-Package>org.apache.logging.log4j.core.*</Export-Package>
             <Import-Package>
+              javax.activation;version"[1.2,2)";resolution:=optional,
               javax.jms;version="[1.1,3)";resolution:=optional,
+              javax.mail;version="[1.6,2)";resolution:=optional,
+              javax.mail.internet;version="[1.6,2)";resolution:=optional,
+              javax.mail.util;version="[1.6,2)";resolution:=optional,
               sun.reflect;resolution:=optional,
               *
             </Import-Package>
